All client files added to Makefile, some adjustments to more recent jQuery

--- a/htdocs/debug.html
+++ b/htdocs/debug.html
@@ -3,14 +3,14 @@
         <head>
                 <title>BTMux WebClient</title>
                 <meta charset="utf-8">
-                <link rel="stylesheet" href="ext/jquery-ui-1.11.1.css">
+                <link rel="stylesheet" href="ext/jquery-ui.css">
                 <link rel="stylesheet" href="style.css">
                 <link rel="stylesheet" href="colors.css">
                 <link rel="shortcut icon" sizes="16x16"  href="map.png">
                 <script src="socket.io/socket.io.js"></script>
-                <script src="ext/jquery-2.1.1.min.js"></script>
-                <script src="ext/jquery-ui-1.11.1.min.js"></script>
-                <script src="ext/jquery-cookie.js"></script>
+                <script src="ext/jquery.min.js"></script>
+                <script src="ext/jquery-ui.min.js"></script>
+                <script src="ext/jquery-cookie.min.js"></script>
                 <script src="ext/jquery.mousewheel.min.js"></script>
 
                 <script src="textview.js"></script>
@@ -28,7 +28,7 @@
 	  <button type="button" id="btn-connect">Connect</button>
 	  <button type="button" id="btn-disconnect">Disconnect</button>
 	  <button type="button" id="btn-settings">Settings</button>
-	  <input type="checkbox" id="btn-battle"><label for="btn-battle">HUD</label>
+	  <input type="checkbox" name="btn-battle" id="btn-battle"><label for="btn-battle">HUD</label>
 	  <span class="debug">Debug version</span>
 	</div>
 
