--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -5,12 +5,12 @@
                 <meta charset="utf-8">
                 <meta name="mobile-web-app-capable" content="yes">
                 <link rel="shortcut icon" sizes="16x16"  href="map.png">
-                <link rel="stylesheet" href="ext/jquery-ui-1.11.1.css">
+                <link rel="stylesheet" href="ext/jquery-ui.css">
                 <link rel="stylesheet" href="btmux.min.css">
                 <script src="socket.io/socket.io.js"></script>
-                <script src="ext/jquery-2.1.1.min.js"></script>
-                <script src="ext/jquery-ui-1.11.1.min.js"></script>
-                <script src="ext/jquery-cookie.js"></script>
+                <script src="ext/jquery.min.js"></script>
+                <script src="ext/jquery-ui.min.js"></script>
+                <script src="ext/jquery-cookie.min.js"></script>
                 <script src="ext/jquery.mousewheel.min.js"></script>
               
                 <script src="btmux.min.js"></script>
