--- a/htdocs/debug.html
+++ b/htdocs/debug.html
@@ -30,6 +30,7 @@
 	  <button type="button" id="btn-settings">Settings</button>
 	  <input type="checkbox" name="btn-battle" id="btn-battle"><label for="btn-battle">HUD</label>
 	  <span class="debug">Debug version</span>
+	  <button type="button" id="btn-todo">Todo</button>
 	</div>
 
 	<div id="mainwindow" class="ui-corner-all">
@@ -56,13 +57,17 @@
                <label for="settings-font-size">Font-Size:</label><input type="range" id="settings-font-size" min="8" max="25"><div class="display" id="font-size-display">15</div><br>
                <label for="settings-scrollback">Scrollback:</label><input type="range" id="settings-scrollback" min="100" max="2000"><div class="display" id="scrollback-display">500</div><br>
                <label for="settings-style">Style:</label><select id="settings-style"><option value="default">Default</option><option value="azure">Azure</option><option value="kelvin">Kelvin</option></select><br>
+               <label for="settings-connect-script">Autoconnect:</label><br>
+               <textarea id="settings-connect-script"></textarea>
            </form>
          </div>
 
 
-	  <div id="dialog-todo" title="todo">
+	  <div id="dialog-todo" title="TODO">
 	    <ul class="open">
 	    <li>Style support</li>
+	       <li>Make command echo configurable</li>
+	       <li>Store default connect script in localdata</li>
 	       <li>Add Ctrl-^ / Alt-^ as alias for Ctrl/alt-0</li>
 	       <li>Scroll text to bottom on enter-battle-mode</li>
 	      <li>Fix mapdata merge of ?? in hudinfo t reply (change to
@@ -79,6 +84,7 @@
 	      <li>Idle-Timout to stop hudinfo after x minutes without userinteraction</li>
 	      <li>fix double style transmission without text in between: ["text",["\tYou may also orbital drop your ",["b"],["b","f11"],"ARC-5R",[]," for ",["b"],"112,375",[]," C-Bills."]]</li>
 	    </ul>
+	    <h2>Done</h2>
 	    <ul class="done">
 	      <li>Preferences</li>
 	       <li>Handle resize events in all widgets</li>
