show help window and a warning if socket.io chooses a fallback transport

--- a/htdocs/debug.html
+++ b/htdocs/debug.html
@@ -29,8 +29,9 @@
 	  <button type="button" id="btn-disconnect">Disconnect</button>
 	  <button type="button" id="btn-settings">Settings</button>
 	  <input type="checkbox" name="btn-battle" id="btn-battle"><label for="btn-battle">HUD</label>
-	  <span class="debug">Debug version</span>
 	  <button type="button" id="btn-todo">Todo</button>
+	  <span class="debug">Debug version</span>
+	  <span class="warning" id="ws-warning"></span>
 	</div>
 
 	<div id="mainwindow" class="ui-corner-all">
