--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -23,6 +23,7 @@
 	  <button type="button" id="btn-settings">Settings</button>
 	  <input type="checkbox" id="btn-battle"><label for="btn-battle">HUD</label>
           <button type="button" id="btn-help">Help</button>
+          <span class="warning" id="ws-warning"></span>
 	</div>
 
 	<div id="mainwindow">
@@ -55,8 +56,28 @@
 
 	 
 	 <div id="dialog-help" title="Help">
-	   
-	 
+	     <p>For Game-Specific help, look around if there's a training
+	     center or ask on in-game channels.</p>
+	     <p>TODO: Write some helpfull help text</p>
+	     <h3>Shortcuts</h3>
+	     <ul>
+	       <li>Alt-0..9: Sight Weapon #0..9</li>
+	       <li>Ctrl-0..9: Fire Weapon #0..9</li>
+	       <li>Ctrl-K: Kick</li>
+	       <li>Ctrl-P: Punch</li>
+	       <li>Ctrl-Z: Speed 0</li>
+	       <li>Ctrl-M: Speed Flank</li>
+	       <li>Ctrl-N: Navigate</li>
+	       <li>Ctrl-T: Tactical</li>
+	       <li>Ctrl-S: Status</li>
+	       <li>Ctrl-R: Range</li>
+	     </ul>
+	     <p>In HUD-Mode, Shift-Click or Middle-Click the Map to change
+	     Heading, use Mouse wheel to change zoom, drag to look
+	     around.</p>
+	     <p>Double-click to refresh/fetch a map area from server.</p>
+	     <p>Right-click for a context menu with Hex/Contact specific
+	     options. (TODO)</p>
 	 </div>
 
         </div>
