Added Hover-Cliff-display, prettified contact display on map, added turret heading indicator

--- a/htdocs/debug.html
+++ b/htdocs/debug.html
@@ -67,6 +67,7 @@
 	  <div id="dialog-todo" title="TODO">
 	    <ul class="open">
 	    <li>Style support</li>
+	       <li>Local Echo interprets HTML</li>
 	       <li>Make command echo configurable</li>
 	       <li>Store default connect script in localdata</li>
 	       <li>Add Ctrl-^ / Alt-^ as alias for Ctrl/alt-0</li>
