Autoconnect-script and escape local echo

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -51,6 +51,8 @@
                <label for="settings-font-size">Font-Size:</label><input type="range" id="settings-font-size" min="8" max="25"><div class="display" id="font-size-display">15</div><br>
                <label for="settings-scrollback">Scrollback:</label><input type="range" id="settings-scrollback" min="100" max="2000"><div class="display" id="scrollback-display">500</div><br>
                <label for="settings-style">Style:</label><select id="settings-style"><option value="default">Default</option><option value="azure">Azure</option><option value="kelvin">Kelvin</option></select><br>
+               <label for="settings-connect-script">Autoconnect:</label><br>
+               <textarea id="settings-connect-script"></textarea>
            </form>
          </div>
 
