--- a/htdocs/debug.html
+++ b/htdocs/debug.html
@@ -57,7 +57,7 @@
            <form>
                <label for="settings-font-size">Font-Size:</label><input type="range" id="settings-font-size" min="8" max="25"><div class="display" id="font-size-display">15</div><br>
                <label for="settings-scrollback">Scrollback:</label><input type="range" id="settings-scrollback" min="100" max="2000"><div class="display" id="scrollback-display">500</div><br>
-               <label for="settings-style">Style:</label><select id="settings-style"><option value="default">Default</option><option value="azure">Azure</option><option value="kelvin">Kelvin</option></select><br>
+               <label for="settings-style">Map-Style:</label><select id="settings-style"><option value="default">Default</option><option value="azure">Azure</option><option value="kelvin">Kelvin</option></select><br>
                <label for="settings-connect-script">Autoconnect:</label><br>
                <textarea id="settings-connect-script"></textarea>
            </form>
@@ -67,9 +67,7 @@
 	  <div id="dialog-todo" title="TODO">
 	    <ul class="open">
 	    <li>Style support</li>
-	       <li>Local Echo interprets HTML</li>
 	       <li>Make command echo configurable</li>
-	       <li>Store default connect script in localdata</li>
 	       <li>Add Ctrl-^ / Alt-^ as alias for Ctrl/alt-0</li>
 	       <li>Scroll text to bottom on enter-battle-mode</li>
 	      <li>Fix mapdata merge of ?? in hudinfo t reply (change to
@@ -88,6 +86,8 @@
 	    </ul>
 	    <h2>Done</h2>
 	    <ul class="done">
+	       <li>Local Echo interprets HTML</li>
+	       <li>Store default connect script in localdata</li>
 	      <li>Preferences</li>
 	       <li>Handle resize events in all widgets</li>
 	      <li>extrapolate heat on heatbar</li>
