--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -26,18 +26,26 @@
           <span class="warning" id="ws-warning"></span>
 	</div>
 
-	<div id="mainwindow">
-          <div id="textwidget"></div>
+	
+        <div id="mainwindow" class="ui-corner-all">
+          <div id="maincontent" class="lrflex">
+            <div id="textwidget"></div>
+            <div class="hudgroup tbflex">
+               <div class="lrflex mapheight">
+                    <div class="hud" id="heatbar"></div>
+                    <div class="hud" id="speedbar"></div>
+                    <div class="hud" id="map"></div>
+               </div>
+               <div class="lrflex contactheight">
+                    <div class="hud" id="weapons"></div>
+                    <div class="hud" id="contacts">... Contact List ...</div>
+               </div>
+            </div>
+          </div> 
           <div class="footerline">
             <input id="text" type="text" autofocus tabindex="1" autocomplete="off">
           </div>
 	</div>
-	
-	<div class="hud" id="map"></div>
-	<div class="hud" id="heatbar"></div>
-	<div class="hud" id="speedbar"></div>
-	<div class="hud" id="weapons"></div>
-	<div class="hud" id="contacts"></div>
 	
 	
 	<div style="display: none">
@@ -50,7 +58,7 @@
            <form>
                <label for="settings-font-size">Font-Size:</label><input type="range" id="settings-font-size" min="8" max="25"><div class="display" id="font-size-display">15</div><br>
                <label for="settings-scrollback">Scrollback:</label><input type="range" id="settings-scrollback" min="100" max="2000"><div class="display" id="scrollback-display">500</div><br>
-               <label for="settings-style">Style:</label><select id="settings-style"><option value="default">Default</option><option value="azure">Azure</option><option value="kelvin">Kelvin</option></select><br>
+               <label for="settings-style">Map-Style:</label><select id="settings-style"><option value="default">Default</option><option value="azure">Azure</option><option value="kelvin">Kelvin</option></select><br>
                <label for="settings-connect-script">Autoconnect:</label><br>
                <textarea id="settings-connect-script"></textarea>
            </form>
