routing of hudinfo data to contact widget

--- a/htdocs/debug.html
+++ b/htdocs/debug.html
@@ -18,6 +18,7 @@
                 <script src="heatbar.js"></script>
                 <script src="mapview.js"></script>
                 <script src="weapons.js"></script>
+                <script src="contacts.js"></script>
                 <script src="hudinfo.js"></script>
                 <script src="inputline.js"></script>
                 <script src="client.js"></script>
